<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apakah_anda_yakin"
            android:textColor="@color/black"
            android:textSize="@dimen/title_popup"/>

        <TextView
            android:id="@+id/content_popup"
            android:layout_marginTop="@dimen/container_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_content"
            android:textSize="@dimen/content_popup"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/negatif_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/selector_pop"
                android:text="@string/mengedit_lagi"
                android:textSize="@dimen/content_popup"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/positif_popup"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/positif_popup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_pop"
                android:text="@string/mengedit_simpan"
                android:textSize="@dimen/content_popup"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>